kubernetes/kong-gw/kong.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integration-service-gw
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)/channel-info
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3000
      - path: /api(/|$)(.*)/channels
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3000
      - path: /api(/|$)(.*)/subscriptions
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3000
      - path: /api(/|$)(.*)/authentication
        pathType: Prefix
        backend:
          service:
            name: ssi-bridge
            port:
              number: 3000
      - path: /api(/|$)(.*)/identities
        pathType: Prefix
        backend:
          service:
            name: ssi-bridge
            port:
              number: 3000
      - path: /api(/|$)(.*)/verification
        pathType: Prefix
        backend:
          service:
            name: ssi-bridge
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integration-service-others
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3000
